# possible-rs

./: Cargo.toml  README.md
src/: boolean.rs  copy.rs  de.rs  default.rs  deref.rs  filter.rs  from.rs  introspection.rs  iter.rs  lib.rs  map.rs  refs.rs  replace.rs  serde.rs  transpose.rs  unwrap.rs  zip.rs
tests/: serde_json.rs  serde_ron.rs  serde_toml.rs  serde_url.rs  serde_yaml.rs
