[package]
name = "possible"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.64"
pretty_assertions = "0.7.2"
