[package]
name = "possible"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.7.2"

# serde libs for tests
serde_json = "1.0.64"
serde_qs = "0.8.4"
ron = "0.6.4"
toml = "0.5.8"
serde_yaml = "0.8.17"
